added more styling to dashboard

--- a/src/stylesheets/components/_app.scss
+++ b/src/stylesheets/components/_app.scss
@@ -7,4 +7,10 @@
 
 header {
   font-size: calc(10px + 2vmin);
+  background-color: #dddddd;
+  h1 {
+    color: #3E5776;
+    font-weight: 300;
+    font-size: 1.5em;
+  }
 }
