--- a/src/stylesheets/components/_dashboard.scss
+++ b/src/stylesheets/components/_dashboard.scss
@@ -1,4 +1,10 @@
 .dashboard {
+  // max-width: 800px;
+  // margin: auto;
+  // display: flex;
+  // flex-direction: row;
+  // justify-content: center;
+
   .form {
     display: flex;
     flex-direction: column;
@@ -16,6 +22,7 @@
       input[type="text"] {
         margin: 0px 10px;
         width: 50%;
+        max-width: 500px;
         height: 20px;
       }
     }
@@ -25,6 +32,9 @@
 .goal-list {
   background-color: #2c323f;
   min-height: 50vh;
+  max-width: 500px;
+  justify-content: center;
+  margin: auto;
   margin-top: 20px;
   padding: 20px;
 
