--- a/src/stylesheets/components/_dashboard.scss
+++ b/src/stylesheets/components/_dashboard.scss
@@ -1,9 +1,4 @@
 .dashboard {
-  // max-width: 800px;
-  // margin: auto;
-  // display: flex;
-  // flex-direction: row;
-  // justify-content: center;
 
   .form {
     display: flex;
@@ -24,6 +19,13 @@
         width: 50%;
         max-width: 500px;
         height: 20px;
+      }
+
+      button {
+        padding: 5px 10px;
+        background: #88DBDF;
+        border: none;
+        border-radius: 15px;
       }
     }
   }
