--- a/src/stylesheets/_config.scss
+++ b/src/stylesheets/_config.scss
@@ -2,3 +2,24 @@ $primary-color: #eee;
 $secondary-color: #88DBDF;
 $background-color: #282c34;
 
+// Media Query Mixins
+@mixin mediaSm {
+  @media screen and (max-width: 500px) and (orientation: portrait) {
+    @content;
+  }
+}
+// @mixin mediaMd {
+//   @media screen and (max-width: 768px) and (orientation: portrait) {
+//     @content;
+//   }
+// }
+// @mixin mediaLg {
+//   @media screen and (min-width: 769px) and (max-width: 1170px) and (orientation: portrait) {
+//     @content;
+//   }
+// }
+@mixin mediaLg {
+  @media screen and (min-width: 501px){
+    @content;
+  }
+}
