--- a/src/stylesheets/components/_app.scss
+++ b/src/stylesheets/components/_app.scss
@@ -1,4 +1,4 @@
-// App + Header + Footer 
+// App + Header(Navbar) + Footer 
 
 .App {
   text-align: center;
@@ -22,14 +22,25 @@ header {
     min-width: 80px;
     height: 70px;
     border-right: 1px solid rgb(214, 216, 216);
-    color: #202121;
     cursor: pointer;
     transition: all 0.3s;
-
-    .item {
-      margin: 25px auto;
-      font-size: 13px;
-    }
+    
+      // Hamburger menu
+      .ico-menu {
+        margin: 28px;
+    
+        .bar1, .bar2, .bar3 {
+          width: 25px;
+          height: 2px;
+          background-color: #333;
+          margin: 5px 0;
+          transition: 0.4s;
+        }
+      }
+    
+      .menu {
+        display: none;
+      }
   }
 
   .logo-header{
@@ -51,7 +62,82 @@ header {
     float: right;
     min-width: 80px;
     height: 70px;
-    // background-color: black;
-    border-left: 1px solid rgb(214, 216, 216);
+    cursor: pointer;
+    transition: 0.3s;
+
+    &:hover {
+      background: rgba(0,0,0, 0.1);
+    }
+
+    // ADD Symbol
+    .add {
+      background: #202121;
+      height: 18px;
+      position: relative;
+      width: 2px;
+      margin: 25px auto;
+
+      &:after {
+        background: #202121;
+        content: "";
+        height: 2px;
+        position: absolute;
+        width: 18px;
+        left: -8px; 
+        top: 8px;
+      }
+    }
+
+    .add-large {
+      display: none;
+    }
   }
+}
+
+// Larger screen
+@include mediaLg {
+  header {
+    .box-left {
+      min-width: 160px;
+      display: flex;
+
+      &:hover {
+        background: rgba(0,0,0,0.1);
+      }
+
+      .ico-menu {
+        margin: 22px 8px 0 34px;
+      }
+      
+      .menu {
+        display: unset;
+        color: #202121;
+        margin: 26px 0 0 8px;
+        font-size: 14px;
+      }
+    }
+
+    .box-right {
+      background: $secondary-color;
+      min-width: 160px;
+
+      &:hover {
+        background: rgb(115, 182, 185);
+      }
+  
+      .add {
+        display: none;
+      }
+      .add-large { 
+        display: unset;
+        color: #202121;
+        div {
+          margin: 25px;
+          font-size: 14px;
+        }
+      }
+    }
+  }
+
+
 }
